improve css performance of fixed position elements by adding 'blackface-visibility: hidden'

--- a/css/base.css
+++ b/css/base.css
@@ -7899,6 +7899,8 @@ a.fbtn:focus, a.fbtn:hover {
   right: 16px;
   bottom: 24px;
   z-index: 21;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: margin-bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), right 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transition: margin-bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), right 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -9286,9 +9288,10 @@ legend + .form-group {
   text-align: center;
   white-space: nowrap;
   width: 100%;
-  -webkit-backface-visibility: hidden;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0s linear 0.3s;
   transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0s linear 0.3s;
 }
@@ -9690,6 +9693,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   z-index: 40;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .modal-open .modal {
   overflow-x: hidden;
@@ -9704,6 +9709,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   bottom: 0;
   left: 0;
   z-index: 39;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -10825,6 +10832,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   position: fixed;
   top: 48px;
   bottom: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .content-fix.fixed .content-fix-wrap {
@@ -10927,9 +10936,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   right: 0;
   left: 0;
   z-index: 30;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
   transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
 }
@@ -11279,6 +11287,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   left: -100%;
   width: 100%;
   z-index: 29;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-property: box-shadow, -webkit-transform;
@@ -11325,6 +11335,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   left: 0;
   width: 0;
   z-index: 28;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transition: height 0s 0.3s, opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), width 0s 0.3s, z-index 0s 0.3s;
