--- a/sass/element/_button-float.scss
+++ b/sass/element/_button-float.scss
@@ -52,6 +52,7 @@ a.fbtn {
 		right: $grid-gutter;
 		bottom: $line-height;
 	z-index: ($content-base + 1);
+	@include backface(hidden);
 	@include transition(margin-bottom 0.3s $timing, right 0.3s $timing);
 }
 
