--- a/sass/theme/_content.scss
+++ b/sass/theme/_content.scss
@@ -15,6 +15,7 @@
 		position: fixed;
 			top: ($line-height * 2);
 			bottom: 0;
+		@include backface(hidden);
 	}
 }
 
