--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -6,8 +6,8 @@
 		right: 0;
 		left: 0;
 	z-index: $header-base;
+	@include backface(hidden);
 	@include clearfix();
-	@include transform(translateZ(0));
 	@include transition(background-color 0.3s $timing, box-shadow 0.15s linear);
 	&.fixed,
 	&.open,
